fixed slideshow by using duplicate first and last slides, at beggining and end, auto start on second slide(which is supposed to be the first none) if you scroll backwards to first slide, slide instantly changed to second to last slide (the effective last slide) and vice versa where if you scroll to last slide, instantly jump to second slide, this also fixed the oscillation as its never auto set to one of the places that trigger a jump. also set interval timer to change slide every 20 seconds

--- a/css/styles.css
+++ b/css/styles.css
@@ -567,7 +567,12 @@ a {
     /* overflow-y: hidden; */
     scroll-snap-type: x mandatory;
 
-    box-sizing: border-box
+    box-sizing: border-box;
+    scrollbar-width: none;
+}
+
+#coaches-slideshoww::-webkit-scrollbar{
+    /* display: none; */
 }
 
 #coaches-slideshow > ul{
@@ -611,13 +616,8 @@ a {
  
     height: fit-content;
     /* border: solid blue; */
-    margin: 60px 0;
+    margin-bottom: 60px;
     scroll-snap-align: start;
-}
-
-.slide-container.duplicate {
-    visibility: hidden;
-    /* Hide the duplicate slides */
 }
 
 .slide-container:last-child {
@@ -1035,6 +1035,10 @@ input, textarea {
 @media (max-width: 1280px) {
     .faq{
         width: 85%;
+    }
+
+    .slideshow-button{
+        display: none;
     }
 }
 
